# scjail-crawler-service

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.db  Dockerfile.scraper  README.md  compose.yaml
.sqlx/: query-35df1a9d8b7d134d07afefbef575b425938f571989bc7aae9e3a871387c9de65.json  query-462802c1a64d7d2eecd0dbc6b8e487510f0d4e78605283115f3f55e4cc02625a.json  query-9c8b3a4ac4a69e2b5e68c73e0e2606062926edab7ea341cccb5d7995ee894eb4.json  query-a54a693bfd04a153d5be50a67c99b4017c405fe852f9d65bc468441c826d3b36.json  query-b58125ac278f49e92ea9c0fefe2763395e136eb597edf0248e90bf9c48160e02.json  query-b6ec83afcc30108bdbbdc53ff2c72826b29a432019af86556feeb211f70ced90.json  query-c09716ffb474c2cfa519a64409f13a0f0722b0e4ba71a7f7db779fd8e4c7c9b8.json  query-cf26272ed8336d3fe91383c0558d7b7d2b34f3c57d1fa3d91c42225e3f30c449.json  query-d12a9e79812a2ab9f54d771a3d5c240b196a9033c74ecfb987eb573c95918e9b.json  query-daf442a61d03b74c37cec9b2cf529db7adcfa70cdeb71e18969e1fe68bac1e0a.json  query-e5695cb6428b4fb6bd677720663d41631066a8c80d5bd73b2a44390bdd668a4b.json  query-f8701aecd9569a068d65656c38895d3180665120376a8a9eeaec7408fc395e99.json
queries/: 002_create_alias.sql  004_create_bond.sql  005_create_charge.sql  006_create_img.sql  alias.sql  bond.sql  charge.sql  create_alias.sql  create_bond.sql  create_charge.sql  create_img.sql  create_inmate.sql  create_inmate_alias.sql  img.sql  init_db.sh  inmate.sql  inmate_alias.sql
src/: error.rs  inmate.rs  lib.rs  main.rs  s3_utils.rs  scraper.rs  serialize.rs  utils.rs
