[package]
name = "scjail-crawler-service"
version = "1.0.0"
edition = "2021"
default-run = "scjail-crawler-service"
rust-version = "1.82.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = { version = "0.21.0", features = ["native-tls"] }
chrono = "0.4.38"
log = "0.4.21"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.4", features = ["json"] }
scraper = "0.19.0"
sqlx = { version = "0.7.4", features = [
	"runtime-tokio",
	"tls-native-tls",
	"postgres",
	"chrono",
	"sqlite",
] }
tokio = { version = "1.37.0", features = ["full"] }
pgvector = { version = "0.3", features = ["sqlx"] }
aws-config = { version = "1.5.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.41.0"
sha2 = "0.10.8"
itertools = "0.13.0"
